# hack

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sample.graphml
ai-builder/: .gitignore  package-lock.json  package.json  tsconfig.json
ai-builder/modal_app/: __init__.py  app.py  dataset_sumarizer.py  main.py  reader_app.py  requirements.txt  st_app.py
ai-builder/src/app/: layout.tsx  page.tsx
ai-builder/src/app/api/predict/: route.ts
ai-builder/src/app/api/status/[slug]/: route.ts
ai-builder/src/app/demo/[slug]/: page.tsx
hack/ai-builder/: streamlit_app.py
hack/ai-builder/modal_app/: README_ENHANCED.md  README_INFERENCE.md  README_UPDATED.md  dataset_sumarizer.py  main.py  reader_app.py  requirements.txt  requirements_enhanced.txt  requirements_streamlit.txt  st_app.py  test_enhanced_summarizer.py
sample_proj/: app.py
vulnflow/: analyzer.py  cli.py  graph.py  llm_detect.py  modal_app.py  rules.py  utils.py
